--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-markdown": "^8.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "tabler-icons-react": "^1.43.0",
